Resolved Post/Get WeekBasedCapacityGroup and Material Demand Issues
