# demand-capacity-mgmt-backend/src/main/java/org/eclipse/tractusx/demandcapacitymgmt/demandcapacitymgmtbackend/entities/converters/WeekBasedMaterialConverter.java
@@ -23,23 +23,24 @@
 package org.eclipse.tractusx.demandcapacitymgmt.demandcapacitymgmtbackend.entities.converters;
 
 import com.google.gson.Gson;
+import eclipse.tractusx.demand_capacity_mgmt_specification.model.WeekBasedMaterialDemandRequest;
 import eclipse.tractusx.demand_capacity_mgmt_specification.model.WeekBasedMaterialDemandRequestDto;
 import javax.persistence.AttributeConverter;
 import javax.persistence.Converter;
 import org.eclipse.tractusx.demandcapacitymgmt.demandcapacitymgmtbackend.entities.jsonEntities.WeekBasedMaterialDemand;
 
 @Converter(autoApply = true)
-public class WeekBasedMaterialConverter implements AttributeConverter<WeekBasedMaterialDemandRequestDto, String> {
+public class WeekBasedMaterialConverter implements AttributeConverter<WeekBasedMaterialDemandRequest, String> {
 
     private static final Gson GSON = new Gson();
 
     @Override
-    public String convertToDatabaseColumn(WeekBasedMaterialDemandRequestDto mjo) {
+    public String convertToDatabaseColumn(WeekBasedMaterialDemandRequest mjo) {
         return GSON.toJson(mjo);
     }
 
     @Override
-    public WeekBasedMaterialDemandRequestDto convertToEntityAttribute(String dbData) {
-        return GSON.fromJson(dbData, WeekBasedMaterialDemandRequestDto.class);
+    public WeekBasedMaterialDemandRequest convertToEntityAttribute(String dbData) {
+        return GSON.fromJson(dbData, WeekBasedMaterialDemandRequest.class);
     }
 }
